# Eventide

./: CMakeLists.txt  README.md
bindings/: CMakeLists.txt  binding.cpp
cmake/: CompilerSettings.cmake
cpp/: CMakeLists.txt  README.md
cpp/include/: AlternatingSimulator.h  Collector.h  CompiledExpression.h  Criterion.h  DaryHeap.h  Parameter.h  RngEngine.h  Sampler.h  Scenario.h  Simulator.h  TrajectoryResult.h
cpp/src/: AlternatingSimulator.cpp  Collector.cpp  CompiledExpression.cpp  Criterion.cpp  RngEngine.cpp  Sampler.cpp  Scenario.cpp  Simulator.cpp  Simulator_.cpp
cpp/tests/: CMakeLists.txt  RngEngine_test.cpp  benchmark.cpp
python/: README.md  acceptance_plots.py  empirical_conditional_progerssive_probabilty.py  extinction.py  literature_anchor.py  on_the_fly.py  optimize_acceptance_windows.py  optimize_acceptance_windows_host_vector.py  plot_FMD.py  plot_TDK.py  plot_final.py  plot_hanta.py  plot_helpers.py  plot_timepath_metrics_hanta.py  plot_timepath_metrics_hu.py  plots.py  presentationplots.py  probability_over_plots.py  rb_pres_plots.py  robustness_appendix_analysis.py  sample_trajectories.py  synthetic.py  test.py  test2.py
python/eventide/: __init__.py  alternating.py  collectors.py  criterion.py  parameter.py  parameters.py  sampler.py  scenario.py  setup.py
python/map/: FMD_risk_heatmap.ipynb
python/plots/: exintction_plot.py  extinct_probs.py  misc.py  online_extinction_plot.py  plot_Re_time.py  plot_acceptance_construction.py  plot_cumulative.py  plot_posteriors.py  plot_selected_Hus.py  style.py
